test/syntax/invalid/rest-not-last.ts
// expect: VZG2001
function invalid(...items, last) {}
